--- a/index_assignment_2_1.html
+++ b/index_assignment_2_1.html
@@ -2,16 +2,16 @@
 <html lang="en"/>
 <head>
 <meta charset="utf-8" />
-<meta name="keywords" content="Inholland, IT, Student">
-<meta name="description" content="My first WebMarkup site">
-<meta name="author" content="Tanvir">
-<title>Tanvir Shihab</title>
+<meta name="keywords" content="Inholland, IT1D, 699290">
+<meta name="description" content="This is my first WebMarkup site">
+<meta name="author" content="Tanvir Shihab">
+<title> Tanvir Shihab </title>
 </head>
 <body>
 <h1>About Me</h1>
 <h2>Tanvir Shihab</h2>
 <p>Hi! I am Tanvir. I am from Bangladesh. I live in Netherlands.</p>
-<a href="https://facebook.com">My FB page</a>
+<a href="https://facebook.com">Facebook</a>
 
 </body>
 </html>
